Create dynamic background changes on fetch response results

--- a/src/components/search/search.style.sass
+++ b/src/components/search/search.style.sass
@@ -1,11 +1,12 @@
 $twitterBlue: #1da1f2
 $searchInputHeight: 60px
 
-#search
+.search
   position: relative
   width: 100%
   height: 100%
   background: $twitterBlue
+  transition-duration: 0.3s
 
   .container
     position: absolute
@@ -53,3 +54,6 @@ $searchInputHeight: 60px
 
       .user-input
         padding: 0 !important
+
+.error
+  background: crimson
