Change dynamic background colors

--- a/src/components/search/search.style.sass
+++ b/src/components/search/search.style.sass
@@ -1,4 +1,6 @@
-$twitterBlue: #1da1f2
+$twitterBlue: #4ee7d7
+$logoColor: #14dc80
+
 $searchInputHeight: 60px
 
 .search
@@ -24,7 +26,7 @@ $searchInputHeight: 60px
         width: $searchInputHeight
         height: $searchInputHeight
         border-radius: 50%
-        background: crimson
+        background: $logoColor
         cursor: pointer
         border: none
 
@@ -40,14 +42,14 @@ $searchInputHeight: 60px
       .user-input
         height: 100%
         width: 100%
-        font-size: 20px
+        font-size: 30px
         font-family: Arial
-        color: #444
+        color: #555
         border: none
         padding-left: $searchInputHeight + 5px
         padding-right: 10px
         border-radius: 35px
-        box-shadow: 3px 3px 5px
+        box-shadow: 2px 2px 3px
 
     .close
       width: $searchInputHeight !important
@@ -59,7 +61,7 @@ $searchInputHeight: 60px
   background: crimson
 
 .success
-  background: lightblue
+  background: #4fe38f
 
 .busy
-  background: #333
+  background: #cc8c2b
