Change default background color to #4994b1; Tweak user-input padding when .close is active

--- a/src/components/search/search.style.sass
+++ b/src/components/search/search.style.sass
@@ -1,4 +1,4 @@
-$twitterBlue: #4ee7d7
+$twitterBlue: #4994b1
 $logoColor: #14dc80
 
 $searchInputHeight: 60px
@@ -55,7 +55,7 @@ $searchInputHeight: 60px
       width: $searchInputHeight !important
 
       .user-input
-        padding: 0 !important
+        padding: 10px !important
 
 .error
   background: crimson
