Add a white border to the input logo/button

--- a/src/components/search/search.style.sass
+++ b/src/components/search/search.style.sass
@@ -28,7 +28,7 @@ $searchInputHeight: 60px
         border-radius: 50%
         background: $logoColor
         cursor: pointer
-        border: none
+        border: 3px solid #FFF
 
         &:before
           position: absolute
