--- a/src/components/search/search.style.sass
+++ b/src/components/search/search.style.sass
@@ -51,8 +51,24 @@ $searchInputHeight: 60px
         border-radius: $searchInputHeight
         box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5)
 
+    .progress-bar
+      margin: 0 auto
+      width: 100px
+      height: 7px
+      border-radius: 10px
+      background: #2a424b
+      overflow: hidden
+
+      .progress
+        width: 0%
+        height: 100%
+        background: #FFF
+        transition-duration: 0.3s
+
     .close
       width: $searchInputHeight !important
+      margin-left: auto
+      margin-right: auto
 
       .user-input
         padding: 10px !important
